--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -537,6 +537,9 @@ es:
       req_created: "ha creado una nueva demanda"
     transact:
       for: "por"
+    select_area_you_verb_service: "Select area you %{verb} service. "
+    offer: "offer"
+    want: "want"
     multiple_select_label: "Para seleccionar más de un elemento de la lista presionar y mantener la tecla Ctrl (Command para Mac)"
 
   person_mailer:
