--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -664,6 +664,9 @@ gr:
 
     transact:
       for: "για"
+    select_area_you_verb_service: "Select area you %{verb} service. "
+    offer: "offer"
+    want: "want"
     multiple_select_label: "Για πολλαπλή επιλογή από την παρακάτω λίστα, κρατήστε πατημένο το πλήκτρο Ctrl"
 
   person_mailer:
