--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -143,6 +143,9 @@ en:
       private_txns: "Private transactions"
       enable_forum: "Enable forum"
       default_member_roles: "Default Member Roles"
+      display_balance: "Display Balance"
+      display_earned: "Display Earned"
+      display_paid: "Display Paid"
     members:
       pending_request: "Pending request"
       cancel_membership: "Cancel membership"
