--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -143,6 +143,9 @@ es:
       private_txns: "Private transactions"
       enable_forum: "Enable forum"
       default_member_roles: "Default Member Roles"
+      display_balance: "Mostrar el saldo de la cuenta"
+      display_earned: "Mostrar los créditos ganados"
+      display_paid: "Mostrar créditos pagados"
     members:
       pending_request: "Solicitud  Pendiente"
       cancel_membership: "Cancelar al miembro"
