--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,7 @@ en:
       header: "Editing group"
       name: "Name"
       currency_unit_plural: "Currency unit (plural)"
+      currency_unit_singular: "Currency unit (singular)"
       asset: "OpenTransact Asset name"
       default_credit_limit: "Default credit limit"
       description: "Description"
@@ -160,6 +161,7 @@ en:
       name: "Name"
       adhoc_currency: "Create ad-hoc currency"
       currency_unit_plural: "Currency unit (plural)"
+      currency_unit_singular: "Currency unit (singular)"
       asset: "asset symbol (one word & permanent)"
       default_credit_limit: "Default credit limit"
       description: "Description"
