--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -133,6 +133,7 @@ es:
       header: "Grupo de redacción"
       name: "Nombre"
       currency_unit_plural: "Unidad monetaria (plural)"
+      currency_unit_singular: "Unidad monetaria (singular)"
       asset: "Nombre del OpenTransact activo"
       default_credit_limit: "límite crediticio"
       description: "Descripción"
@@ -160,6 +161,7 @@ es:
       name: "Nombre"
       adhoc_currency: "Crear una moneda adecuada"
       currency_unit_plural: "Unidad(es) monetaria(s)"
+      currency_unit_singular: "Unidad monetaria (singular)"
       asset: "Símbolo (una palabra & permanente)"
       default_credit_limit: "límite de crédito"
       description: "Descripción"
