--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -188,6 +188,7 @@ fr:
       header: "Modifier les groupes"
       name: "Nom"
       currency_unit_plural: "Currency unit (plural)"
+      currency_unit_singular: "unité monétaire (singulière)"
       asset: "OpenTransact Asset name"
       default_credit_limit: "Limite de crédit initiale"
       description: "Description"
@@ -215,6 +216,7 @@ fr:
       name: "Nom"
       adhoc_currency: "Create ad-hoc currency"
       currency_unit_plural: "Currency unit (plural)"
+      currency_unit_singular: "unité monétaire (singulière)"
       asset: "asset symbol (one word & permanent)"
       default_credit_limit: "Limite de credit initiale"
       description: "Description"
