--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -246,6 +246,7 @@ gr:
       header: "Επεξεργασία Ομάδας"
       name: "Όνομα"
       currency_unit_plural: "Νόμισμα (πληθυντικός)"
+      currency_unit_singular: "Νόμισμα (singular)"
       asset: "OpenTransact Asset name"
       default_credit_limit: "Προεπιλεγμένο πιστωτικό όριο"
       description: "Περιγραφή"
@@ -273,6 +274,7 @@ gr:
       name: "'Ονομα"
       adhoc_currency: "Create ad-hoc currency"
       currency_unit_plural: "Νόμισμα (πληθυντικός)"
+      currency_unit_singular: "Νόμισμα (singular)"
       asset: "asset symbol (one word & permanent)"
       default_credit_limit: "Προεπιλεγμένο πιστωτικό όριο"
       description: "Περιγραφή"
