--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -638,7 +638,7 @@ en:
   notice_updated_the_client_information_successfully: "Updated the client information successfully"
   notice_destroyed_the_client_application_registration: "Destroyed the client application registration"
   notice_offer_updated: "Offer was successfully updated."
-  notice_thanks_for_signing_up_check_email: "Thanks for signing up! Check your email to verify your email address."
+  notice_thanks_for_signing_up_check_email: "To complete your registration check your email INBOX (and SPAM) folders for an email from us. Click the link to verify your email address. Thanks!"
   notice_thanks_for_signing_up: "Thanks for signing up!"
   notice_post_updated: "Post updated"
   notice_request_updated: "Request was successfully updated."
